# twitch-to-shorts

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ANALYTICS_DEBUG.md  COMMENT_MONITOR_COMPLETION.md  COMMENT_MONITOR_README.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  LOCAL_MIGRATION_PLAN.md  LOCAL_MIGRATION_REVIEW.md  README.md  SPRINT_PLAN.md  TRENDING_IMPLEMENTATION.md  VIRAL_RESEARCH.md  config.yaml  main.py  pyproject.toml  requirements-captions.txt  requirements-dev.txt  requirements.txt  run.bat  sync_db.py
data/: analytics-insights.md  auto_tune_report.json  blocklist.txt  streamer-research.md  streamer_health.json  streamer_recommendations.json  trending_cache.json  upload_ratelimit.json
docs/: audit-history.md  claw-improvements.md  ideas.md  roadmap.md  rotation-system.md  schedule_expectations.md  streamer-discovery.md
scripts/: README_DASHBOARD.md  auto_tune.py  backfill_thumbnails.py  daily_dashboard.py  discover_streamers.py  metrics_summary.py  monitor_comments.py  rebrand_channel.py  rotate_streamers.py  run-pipeline.sh  run-rotation.sh  self_improve.py  streamer_health.py  streamer_research.py
src/: audio_scorer.py  captioner.py  clip_filter.py  comment_monitor.py  db.py  db_queue.py  dedup.py  downloader.py  engagement.py  hook_detector.py  hook_editor.py  instagram_uploader.py  media_utils.py  models.py  narrator.py  pipeline.py  thumbnail_enhancer.py  title_optimizer.py  trending.py  twitch_client.py  video_processor.py  youtube_analytics.py  youtube_reporting.py  youtube_uploader.py
tasks/: auto-captions-plan.md  (+11 more)
(+46 files in other folders)
